Changed some UI values to ensure readability

--- a/style.css
+++ b/style.css
@@ -22,17 +22,16 @@
 }
 
 p {
-    margin: 1rem 0;
+    margin: 0;
 }
 
 body {
     height: 100vh;
     display: flex;
-    justify-content: center;
 }
 
 .image {
-    flex-basis: 40%;
+    flex-basis: 35%;
     height: 100vh;
     background-image: url('./image/signBgi.jpg');
     background-size: cover;
@@ -60,36 +59,28 @@ body {
 
 main {
     background-color: var(--main-bgc-color);
-    flex-basis: 60%;
+    flex-basis: 65%;
     display: flex;
     flex-direction: column;
     color: var(--main-color);
-    padding: 0 40px;
-}
-
-.wrapper {
-    flex-basis: 30%;
-}
-
-.wrapper:first-of-type {
-    position: relative;
-}
-
-.wrapper:first-of-type div {
-    position: absolute;
-    bottom: 0;
+    padding: 20px 10%;
+    overflow: auto;
 }
 
 .wrapper:first-of-type p{
     font-size: 1.5rem;
 }
 
-.wrapper:first-of-type p:not(p:nth-child(3)) {
-    margin: 0;
+.wrapper:first-of-type p:nth-child(3) {
+    margin-top: 20px;
 }
 
 .wrapper:first-of-type span {
     font-style: italic;
+}
+
+.wrapper:nth-of-type(2) {
+    align-self: center;
 }
 
 .wrapper:nth-of-type(2) button{
@@ -105,13 +96,12 @@ main {
 
 .wrapper:nth-of-type(2) a {
     text-decoration: none;
-    color: var(--button-color);
+    color: var(--neon-border-color);
     font-weight: bold;
 }
 
 form {
     position: relative;
-    flex-basis: 40%;
     margin: 30px 0;
     padding: .75rem 0;
 }
@@ -125,13 +115,11 @@ form:focus-within legend{
 
 form fieldset{
     margin: 0;
-    padding: 45px 30px;
+    padding: 30px 40px 0;
     border: 5px solid var(--main-color);
     border-radius: 20px;
     animation: neon-border 1.5s infinite alternate;
 }
-
-
 
 form legend {
     position: absolute;
@@ -201,7 +189,7 @@ form label.success input {
 }
 
 form label:focus-within {
-    color: rgb(238, 109, 46);
+    color: #FF9865;
 }
 
 form input {
@@ -258,10 +246,10 @@ form input:focus{
         box-shadow:
             0 0 5px var(--main-color),
             inset 0 0 5px var(--main-color),
-            0 0 15px var(--button-color),
-            inset 0 0 15px var(--button-color),
-            0 0 20px var(--button-color),
-            inset 0 0 20px var(--button-color);
+            0 0 15px var(--neon-border-color),
+            inset 0 0 15px var(--neon-border-color),
+            0 0 20px var(--neon-border-color),
+            inset 0 0 20px var(--neon-border-color);
         }
 
     20%,
